centramos el footer y el titulo lo colocamos mas pequeño

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <hr>
 
   <footer>
-    <p>Derechos de autor reservados por <strong>RedCode</strong></p>
+    <p>Derechos de Copyright reservados por <strong>RedCode</strong></p>
   </footer>
  
   </body>
