--- a/index.html
+++ b/index.html
@@ -47,22 +47,9 @@
 
   <hr>
 
-  <br><br><br><br><br>  
-    <div class="gallery-2">
-      <div class="conta1"><img src="html.png"></div>
-      <div class="conta1"><img src="css.png"></div>
-      <div class="conta1"><img src="javascript.png"></div>
-      <div class="conta1"><img src="nodejs.png"></div>
-      <div class="conta1"><img src="React.png"></div>
-      <div class="conta1"><img src="python.png"></div>
-      <div class="conta1"><img src="php.png"></div>
-      <div class="conta1"><img src="angular.png"></div>
-      <div class="conta1"><img src="Java.png"></div>
-      <div class="conta1"><img src="Csharp.png"></div>
-      <div class="conta1"><img src="c++.png"></div>
-      <div class="conta1"><img src="MongoDB.png"></div>
-      <div class="conta1"><img src="Sql_data.png"></div>
-      <div class="conta1"><img src="git.png"></div>
-    </div>
+  <footer>
+    <p>Derechos de Copyright reservados por <strong>RedCode</strong></p>
+  </footer>
+ 
   </body>
 </html>
